- add markers between records in storage data, so recovery might result in less data loss
- processdialog, minimize or show on taskbar. Going to desktop fails now
- add option in action builder to popup dialog for field values (fill in at runtime)
- add log templates
- add support for GCComments https://userscripts.org/scripts/show/75959

V1.9.4.0

- add: OKAPI, Import geocaches within radius

V1.9.3.0

- change: French language updated (thanks icaunais and RHCV)
- change: German language updated (thanks SKAMS)
- change: Framework now supports account name per geocache prefix (GC, MZ, OX, OC etc) (re-import Munzees if applicable)
- add: Action Builder now has a filter Is own
- add: Settings folder selection at startup of the application now contains a Default button to select the applications default settings folder
- add: Settings folder selection in file menu now contains a Default button to select the applications default settings folder
- add: Settings for account names for other sites. Coupling is done by GC code prefix like GC, OX and OC
- add: OKAPI support plugin (support for opencaching.de, opencaching.pl and opencaching.nl)
- add: OKAPI, Import My Finds plugin (imports all your logs with geocaches)
- add: OKAPI, Import by bounding box plugin added
- add: OKAPI, Import by list of geocache codes

V1.9.2.0

- fix: Query editor, operator now restored correctly after restarting GAPP
- fix: Warning dialog text when delete and ignore the active geocache
- fix: Search geocaches within a region fix for search within selection
- fix: Search geocaches within region for the first region in the list

V1.9.1.0

- fix: Export to Garmin and GPX for name prefix if geocache has extra/corrected coordinates
- add: Live API plugin to import the geocache images (image data only)
- fix: GSAK import, now able to handle attributes where the Inc property has not been set
- fix: GSAK import, now also reads the Corrected table for additional corrected coordinates