@@ -10,6 +10,7 @@ todo:
 V1.9.4.0
 
 - add: OKAPI, Import geocaches within radius
+- add: OKAPI, Authorization added. This will add features to be implemented that requires Authentication level 3
 
 V1.9.3.0
 
